<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item android:id="@+id/nav_news"
            android:icon="@drawable/ic_newspaper_grey600_18dp"
            android:title="@string/update_title" />
        <item android:id="@+id/nav_timetable"
            android:icon="@drawable/ic_timetable_grey600_18dp"
            android:title="@string/timetable_title" />

        <item android:id="@+id/nav_social"
            android:icon="@drawable/ic_timetable_grey600_18dp"
            android:title="@string/social_string" />

        <item android:id="@+id/nav_map"
            android:icon="@drawable/ic_information_grey600_48dp"
            android:title="@string/nci_map" />

        <item android:id="@+id/nav_help"
            android:icon="@drawable/ic_information_grey600_48dp"
            android:title="@string/help_string" />

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings_grey600_48dp"
            android:title="@string/settings_title" />
    </group>
    <item android:title="Other">
        <menu>
            <item android:id="@+id/nav_profile"
                android:icon="@drawable/ic_logout_grey600_18dp"
                android:title="@string/nav_profile_name">
            </item>
            <item android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout_grey600_18dp"
                android:title="@string/logout_title">
            </item>
        </menu>
    </item>
</menu>